--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     border-style: solid;
     border-color: #c7c5c3;
     border-width: 2px;
-    transition: .5s;
+    transition: .2s;
 }
 .project-name {
     position: absolute;
@@ -21,13 +21,13 @@
     top: 45%;
     left: 50%-40px;
     text-align: center;
-    transition: .5s;
+    transition: .2s;
 }
 .project-info {
     position: relative;
     padding: 10px;
     top: 100%;
-    transition: .5s;
+    transition: .2s;
 }
 .projects-item {
     position: relative;
@@ -46,7 +46,7 @@
     background: rgba(255,255,255,0.2);
     backdrop-filter: blur(20px);
     transform-style: preserve-3d;
-    transition: .5s;
+    transition: .3s;
 }
 .projects-item:hover {
     border-color: #0381ff;
@@ -69,6 +69,7 @@
 .background {
     position: absolute;
     z-index: 0;
+    overflow-y: scroll;
 }
 
 body {
